Fix button positioning on mobile for book details view after adding Navlink.

--- a/src/styles/details.scss
+++ b/src/styles/details.scss
@@ -325,6 +325,22 @@ $book_brown: rgba(77, 63, 63, 0.63);
         flex-direction: row;
         position: relative;
         width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        
+    }
+    .shelf__link {
+        width: 85vw;
+        margin: 0;
+        margin-top: 15px;
+        display: flex;
+        justify-content: center;
+    }
+    .edit__link {
+        width: 85vw;
+        margin: 0;
+        display: flex;
+        justify-content: center;
     }
     .main__button {
         width: 75%;
